refactor: 테스트 코드 내 Mockito 람다 Spy 오류 수정 및 검증 대전제 갱신